<resources>
    <string name="app_name">helpGPT</string>
    <string name="start">start</string>
    <string name="settings">settings</string>
    <string name="api_key">API Key</string>
    <string name="gpt_model">GPT Model</string>
    <string name="youtube">Youtube :</string>
    <string name="write_youtube_address_or_videoid">Write Youtube address or VideoId</string>
    <string name="summary_start">Summary Start!</string>
    <string name="translate">Translate</string>
    <string name="translate_service">Translate Service</string>
    <string name="translate_result">번역 결과</string>

    <string name="translation_permission_btn_text">번역 화면을 위한 권한이 필요합니다.</string>

    <string name="recordForTranslate">번역을 위해 녹음 중 입니다.</string>
    <string name="stopRecord">중지</string>
    <string name="pauseRecord">녹음 정지</string>
    <string name="resumeRecord">녹음 재개</string>
</resources>