<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.drone.helpgpt.vm.MainViewModel" />
    </data>
    <androidx.slidingpanelayout.widget.SlidingPaneLayout
        android:id="@+id/settings_slide_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent" android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/settings_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/round_settings_24"
                android:text="@string/settings"
                android:contentDescription="@string/settings"
                android:clickable="true"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <kr.co.prnd.YouTubePlayerView
                android:id="@+id/you_tube_player_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/youtube_edit_text"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/you_tube_player_view"
                app:layout_constraintStart_toStartOf="@id/you_tube_player_view"
                app:layout_constraintEnd_toEndOf="@id/you_tube_player_view"
                android:textSize="12sp"
                android:text="@={viewModel._address}"
                android:hint="@string/write_youtube_address_or_videoid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/summary_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_start"
                android:visibility="@{viewModel.summaryBtnVisibility}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/youtube_edit_text"
                android:layout_marginTop="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/translate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate"
                android:visibility="@{viewModel.translateBtnVisibility}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/summary_btn"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/translate_text_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_result"
                tools:text="@string/translate_result"
                android:visibility="@{viewModel.translateVisibility}"
                app:layout_constraintTop_toBottomOf="@id/youtube_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/translate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.translateResultText}"
                tools:text=""
                android:visibility="@{viewModel.translateVisibility}"
                app:layout_constraintTop_toBottomOf="@id/translate_text_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>



            <WebView
                android:id="@+id/crawling_webview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/translate_btn"
                android:paddingTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fade">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Drone0898" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gpt_model_label"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/gpt_model"
                app:layout_constraintStart_toStartOf="@id/user_name"
                app:layout_constraintTop_toBottomOf="@id/user_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/gpt_model_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/gpt_model_label"
                app:layout_constraintLeft_toRightOf="@id/gpt_model_label"
                app:layout_constraintTop_toTopOf="@id/gpt_model_label"
                tools:text="GPT 4.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/api_key_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/api_key"
                app:layout_constraintStart_toStartOf="@id/gpt_model_label"
                app:layout_constraintTop_toBottomOf="@id/gpt_model_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="@id/api_key_label"
                app:layout_constraintLeft_toRightOf="@id/gpt_model_label"
                app:layout_constraintTop_toTopOf="@id/api_key_label"
                tools:text="\@abcdefghijklmnopqrs" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.slidingpanelayout.widget.SlidingPaneLayout>
</layout>